{{$NEXT}}

0.000072  2017-06-17 21:48:14-07:00 America/Los_Angeles

    - No change since last trial

0.000071  2017-06-10 13:40:27-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Introduce Test2::V# bundles
    - Deprecate Test2::Bundle::Extended
    - Test2::V0 added
    - Fix Test2::Mock doesn't accept non-ref values (Mike Raynham)
    - Fix isa_ok overload issue (Mike Raynham)

0.000070  2017-03-19 13:34:25-07:00 America/Los_Angeles

    - Revert Boolean overload fixes from djerius until they can be fixed
    - Do not mention Term::ReadKey in docs
    - Add Term::Size::Any to test report

0.000069  2017-03-16 20:57:43-07:00 America/Los_Angeles

    - No changes from trial

0.000068  2017-03-08 20:22:23-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Set the term size for all tests that use tables
    - Boolean overload fixes from djerius

0.000067  2017-01-03 19:41:52-08:00 America/Los_Angeles

    - No changes

0.000066  2016-12-23 15:16:18-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Move sub_info to Sub::Info

0.000065  2016-12-19 19:46:47-08:00 America/Los_Angeles

    - AUTHOR_TESTING a fragile test

0.000064  2016-12-19 11:56:28-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Move Test2::Util::Table to Term::Table

0.000063  2016-12-17 12:11:39-08:00 America/Los_Angeles

    - No notable changes since the last trial release.

0.000062  2016-12-03 14:03:44-08:00 America/Los_Angeles (TRIAL RELEASE)

    - An event without a trace object throw would an exception when using
      Test2::Compare::Event and the comparison failed
    - Fix tests for small terminals (#106)
    - Enhance the table library
    - UTF8 plugin does not set STDERR/STDOUT

0.000061  2016-11-26 12:39:14-08:00 America/Los_Angeles

    - Fix mocked objects so that they respond properly to ->can when using AUTOLOAD.
    - Fix some meta-files
    - Small build improvements
    - Minor fixes

0.000060  2016-09-25 12:38:43-07:00 America/Los_Angeles

    - Fix some docs