@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add Test2::Plugin::Times
+
 0.000072  2017-06-17 21:48:14-07:00 America/Los_Angeles
 
     - No change since last trial
